# promptopt

./: .gitignore  DOCUMENTATION.md  LICENSE  MANIFEST.in  README.md  RELEASE_NOTES.md  check_environment.py  environment.yml  prompt_optimization_package_plan.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  setup_env.sh
examples/: custom_data_quickstart.py  flexible_data_generation.py  hybrid_optimization_demo.py  llm_data_generation.py  optimizer_comparison.py  synthetic_data_demo.py
notebooks/: Enterprise_Quickstart.ipynb
promptopt/: __init__.py
promptopt/colab/: __init__.py  integration.py  manager.py  wizards.py
promptopt/core/: __init__.py  base.py  constraints.py  interfaces.py  metrics.py
promptopt/enterprise/: __init__.py  poc.py
promptopt/evaluation/: __init__.py  tournaments.py
promptopt/optimizers/: __init__.py  dspy_adapter.py  grpo_adapter.py  hybrid.py
promptopt/utils/: __init__.py  data_handlers.py  llm_clients.py  visualization.py
test_installation/: comprehensive_test.py  end_to_end_demo.py  quick_test.py  simple_demo.py  test_pypi_install.py
tests/: __init__.py  test_core.py  test_data.py  test_utils.py
