[project]
name = "promptopt"
version = "0.1.0"
description = "Enterprise prompt optimization framework combining DSPy and GRPO approaches"
authors = [{name = "PromptOpt Team", email = "team@promptopt.dev"}]
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
keywords = ["prompt optimization", "dspy", "grpo", "llm", "prompt engineering", "enterprise", "ai"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

[project.urls]
"Homepage" = "https://github.com/yourusername/promptopt"
"Bug Tracker" = "https://github.com/yourusername/promptopt/issues"
"Documentation" = "https://github.com/yourusername/promptopt/blob/main/DOCUMENTATION.md"

dependencies = [
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "dspy-ai>=2.0.0",
    "numpy>=1.21.0",
    "pandas>=1.3.0",
    "pydantic>=2.0.0",
    "pyyaml>=6.0",
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "tqdm>=4.62.0",
    "requests>=2.26.0",
    "tenacity>=8.0.0",
    "rich>=10.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=3.0.0",
    "pytest-asyncio>=0.18.0",
    "black>=22.0.0",
    "isort>=5.10.0",
    "mypy>=0.990",
    "flake8>=4.0.0",
]

colab = [
    "google-colab",
    "ipywidgets>=7.6.0",
]

[project.scripts]
promptopt = "promptopt.cli:main"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]